--- a/style.css
+++ b/style.css
@@ -21,3 +21,84 @@ body {
     position: relative;
     width: 100%;
 }
+
+/* navigation */
+.navigation {
+    position: fixed;
+    width: 300px;
+    height: 100%;
+    background: var(--blue);
+    border-left: 10px solid var(--blue);
+    transition: 0.5s;
+    overflow: hidden;
+}
+.navigation ul {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+}
+/* navigation - item */
+.navigation ul li {
+    position: relative;
+    width: 100%;
+    list-style: none;
+    border-top-left-radius: 30px;
+    border-bottom-left-radius: 30px;
+}
+.navigation ul li:hover {
+    background: var(--white);
+}
+.navigation ul li:nth-child(1) {
+    margin-bottom: 40px;
+    pointer-events: none;
+}
+.navigation ul li a {
+    position: relative;
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: 60px;
+    text-decoration: none;
+    color: var(--white);
+}
+.navigation ul li:hover a {
+    color: var(--blue);
+}
+.navigation ul li a .icon {
+    position: relative;
+    display: block;
+    min-width: 60px;
+    text-align: center;
+}
+.navigation ul li a .icon ion-icon {
+    font-size: 1.75em;
+}
+.navigation ul li a .title {
+    position: relative;
+    display: block;
+    padding: 0 10px;
+    text-align: start;
+    white-space: nowrap;
+}
+/* navigation - curve outside the item */
+.navigation ul li:hover a::before,
+.navigation ul li:hover a::after {
+    content: '';
+    position: absolute;
+    right: 0;
+    width: 50px;
+    height: 50px;
+    background: transparent;
+    border-radius: 50%;
+    pointer-events: none;
+}
+.navigation ul li:hover a::before {
+    top: -50px;
+    box-shadow: 35px 35px 0 10px var(--white);
+}
+.navigation ul li:hover a::after {
+    bottom: -50px;
+    box-shadow: 35px -35px 0 10px var(--white);
+
+}
