added recent-customers layout

--- a/style.css
+++ b/style.css
@@ -247,6 +247,7 @@ body {
     background: var(--white);
     padding: 20px;
     box-shadow: 0 7px 25px rgba(0, 0, 0, 0.08);
+    border-radius: 20px;
 }
 .recent-orders .header {
     display: flex;
@@ -311,4 +312,61 @@ body {
  }
 .status.in-progress {
     background: #1795ce;
+}
+
+/* recent-customers */
+.recent-customers {
+    position: relative;
+    background: var(--white);
+    padding: 20px;
+    box-shadow: 0 7px 25px rgba(0, 0, 0, 0.08);
+    border-radius: 20px;
+}
+.recent-customers .header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.recent-customers .header h2 {
+    font-weight: 600;
+    color: var(--blue);
+}
+.recent-customers .img {
+    position: relative;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    overflow: hidden;
+}
+.recent-customers .img img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.recent-customers table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 10px;
+}
+.recent-customers table tr:hover {
+    background: var(--blue);
+    color: var(--white);
+}
+.recent-customers table tr td {
+    padding: 12px 10px;
+}
+.recent-customers table tr td h4 {
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.2em;
+}
+.recent-customers table tr td h4 span {
+    font-size: 14px;
+    color: var(--black2);
+}
+.recent-customers table tr:hover td h4 span {
+    color: var(--white);
 }
