--- a/style.css
+++ b/style.css
@@ -370,3 +370,61 @@ body {
 .recent-customers table tr:hover td h4 span {
     color: var(--white);
 }
+
+/* responsive design */
+@media (max-width: 991px) {
+    .navigation {
+        left: -300px;
+    }
+    .navigation.active {
+        width: 300px;
+        left: 0;
+    }
+    .main {
+        width: 100%;
+        left: 0;
+    }
+    .main.active {
+        left: 300px;
+    }
+    .card-box {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media (max-width: 768px) {
+    .details {
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .recent-orders {
+        overflow-x: auto;
+    }
+    .status.in-progress {
+        white-space: nowrap;
+    }
+}
+
+@media (max-width: 480px) {
+    .card-box {
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .user {
+        min-width: 40px;
+    }
+    .navigation {
+        z-index: 1000;
+    }
+    .navigation.active {
+        width: 100%;
+        left: 0;
+    }
+    .toggle {
+        z-index: 1001;
+    }
+    .main.active .toggle {
+        position: fixed;
+        right: 0;
+        left: initial;
+        color: var(--white);
+    }
+}
